--- a/great-idea/index.html
+++ b/great-idea/index.html
@@ -70,7 +70,7 @@
       </div>
     </section>
 <footer>
-    <p>Contact us:</p>
+    <p>Contact:</p>
     <p>Email us:sales@greatidea.io</p>
     <p>Phone Number:1 (888) 888-8888</p>
     <address>
