--- a/great-idea/services.html
+++ b/great-idea/services.html
@@ -17,26 +17,23 @@
 </body>
 <div class="navigation">
   <nav>
-    <ul>
-      <il><a href="services.html">Services</a></il>
-      <il><a href="#">Product</a></il>
-      <il><a href="#">Vision</a></il>
-      <il><a href="#">Features</a></il>
-      <il><a href="#">About</a></il>
-      <il><a href="#">Contact</a></il>
-    </ul>
+      <a href="services.html">Services</a>
+      <a href="#">Product</a>
+      <a href="#">Vision</a>
+      <a href="#">Features</a>
+      <a href="#">About</a>
+      <a href="#">Contact</a>
   </nav>
   <img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
 </div>
 <header>
     <div class="inovation">
-      <h1>Great Idea! - Services</h1>
+      <h1>Services</h1>
       <p>Our services provide the best digital value in nulla suscipit interdum diam at maximus. 
         Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. 
         Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. 
         Fusce finibus sem neque, sed faucibus nibh pellentesque eleifend. 
         Mauris euismod facilisis iaculis.</p>
-      <button>Get Started</button>
     </div>
 <img class="services-header-img" src="img/services-header.jpg" alt="Our services header image">
 </header>
@@ -60,19 +57,17 @@ eleifend. Mauris euismod facilisis iaculis.</p>
   eleifend. Mauris euismod facilisis iaculis.</p>
 <button>Learn More</button>
 <br>
-
 <h2>Web Development</h2>
 <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
 eleifend. Mauris euismod facilisis iaculis.</p>
 <button>Learn More</button>
 <br>
-
+<div class="Content3"></div>
 <h2>iOS Development</h2>
 <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
     eleifend. Mauris euismod facilisis iaculis.</p>
 <button>Learn More</button>
 <br>
-
 <h2>Android Development</h2>
 <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
 eleifend. Mauris euismod facilisis iaculis.</p>
@@ -90,6 +85,7 @@ eleifend. Mauris euismod facilisis iaculis.</p>
     <a href="#">Great thing</a>
   </nav>  
   <img class="services-info-img" src="img/services-info.png" alt="one of our employees hard at work">
+  <p&copy>Copyright Great Idea 2018</p>
 </footer>
 
 </body>
