--- a/great-idea/services.html
+++ b/great-idea/services.html
@@ -7,7 +7,7 @@
   <title>Great Idea!</title>
 
   <link href="https://fonts.googleapis.com/css?family=Bangers|Titillium+Web" rel="stylesheet">
-  <link rel="stylesheet" href="css/index.css">
+  <link rel="stylesheet" href="css/services.css">
 
   <!--[if lt IE 9]>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
@@ -29,53 +29,53 @@
 <header>
     <img class="services-header-img" src="img/services-header.jpg" alt="Our services header image">
     <div class="inovation">
-      <h1>Services</h1>
+      <diV<h1>Services</h1>
       <p>Our services provide the best digital value in nulla suscipit interdum diam at maximus. 
         Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. 
         Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. 
         Fusce finibus sem neque, sed faucibus nibh pellentesque eleifend. 
-        Mauris euismod facilisis iaculis.</p>
+        Mauris euismod facilisis iaculis.</p></diV>
     </div>
 </header>
 
 <section class="middle-content"></section>
 <div class="Content1"></div>
- <h2>Digital Design</h2>
+ <div></div><h2>Digital Design</h2>
  <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
-    eleifend. Mauris euismod facilisis iaculis.</p>
+    eleifend. Mauris euismod facilisis iaculis.</p></div>
 <button>Learn More</button>
 <br>
 
-<h2>UX / UI</h2>
+<div></div><h2>UX / UI</h2>
 <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
-eleifend. Mauris euismod facilisis iaculis.</p>
+eleifend. Mauris euismod facilisis iaculis.</p></div>
 <button>Learn More</button>
 </div>
 <div class="Content2"></div>
-<h2>Digital Marketing</h2>
+<div></div><h2>Digital Marketing</h2></div>
 <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
   eleifend. Mauris euismod facilisis iaculis.</p>
 <button>Learn More</button>
 <br>
-<h2>Web Development</h2>
+<div></div><h2>Web Development</h2>
 <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
-eleifend. Mauris euismod facilisis iaculis.</p>
+eleifend. Mauris euismod facilisis iaculis.</p></div>
 <button>Learn More</button>
 <br>
 <div class="Content3"></div>
-<h2>iOS Development</h2>
+<div></div><h2>iOS Development</h2>
 <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
-    eleifend. Mauris euismod facilisis iaculis.</p>
+    eleifend. Mauris euismod facilisis iaculis.</p></div>
 <button>Learn More</button>
 <br>
-<h2>Android Development</h2>
+<div></div><h2>Android Development</h2>
 <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
-eleifend. Mauris euismod facilisis iaculis.</p>
+eleifend. Mauris euismod facilisis iaculis.</p></div>
 <button>Learn More</button>
 
 <footer>
   <div class="footer-content"></div>
-  <h3>Some Facts About Our Services</h3>
+  <h2>Some Facts About Our Services</h2>
   <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
     eleifend. Mauris euismod facilisis iaculis.</p>
   <nav>
