--- a/great-idea/services.html
+++ b/great-idea/services.html
@@ -13,8 +13,14 @@
    <body>
     <div class="navigation">
       <nav>
-        <a href="services.html">Services</a> <a href="#">Product</a> <a href="#">Vision</a> <a href="#">Features</a> <a href="#">About</a> <a href="#">Contact</a>
-      </nav><img alt="Great Idea! Company logo."class="logo"src="img/logo.png"></div>
+        <a href="services.html">Services</a> 
+        <a href="#">Product</a> 
+        <a href="#">Vision</a> 
+        <a href="#">Features</a> 
+        <a href="#">About</a> 
+        <a href="#">Contact</a>
+        <img alt="Great Idea! Company logo."class="logo"src="img/logo.png"></div>
+      </nav>
       <header>
         <img alt="Our services header image"class="services-header-img"src="img/services-header.jpg">
           <div class="inovation">
@@ -23,17 +29,17 @@
             consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque eleifend. Mauris euismod facilisis iaculis.</p>
           </div>
       </header>
-        <section class="middle-content">
-          <div class="Content1"></div>
+        <section class="main-content">
+          <div class="top-content"></div>
           <h2>Digital Design</h2>
           <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh
               pellentesque eleifend. Mauris euismod facilisis iaculis.</p>
-          <button>Learn More</button><br>
+          <button>Learn More</button>
           <h2>UX / UI</h2>
           <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh
                   pellentesque eleifend. Mauris euismod facilisis iaculis.</p>
           <button>Learn More</button>
-          <div class="Content2"></div>
+          <div class="middle-content"></div>
           <h2>Digital Marketing</h2>
           <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh
                     pellentesque eleifend. Mauris euismod facilisis iaculis.</p>
@@ -41,12 +47,12 @@
           <h2>Web Development</h2>
           <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh
               pellentesque eleifend. Mauris euismod facilisis iaculis.</p>
-          <button>Learn More</button><br>
-          <div class="Content3"></div>
+          <button>Learn More</button>
+          <div class="bottom-content"></div>
           <h2>iOS Development</h2>
           <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh
           pellentesque eleifend. Mauris euismod facilisis iaculis.</p>
-          <button>Learn More</button><br>
+          <button>Learn More</button>
           <h2>Android Development</h2>
           <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh
           pellentesque eleifend. Mauris euismod facilisis iaculis.</p>
@@ -58,7 +64,10 @@
         <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh
         pellentesque eleifend. Mauris euismod facilisis iaculis.</p>
         <nav>
-          <a href="#">Awesome thing</a> <a href="#">Amazing thing</a> <a href="#">Cool thing</a> <a href="#">Great thing</a>
+          <a href="#">Awesome thing</a> 
+          <a href="#">Amazing thing</a> 
+          <a href="#">Cool thing</a> 
+          <a href="#">Great thing</a>
             <img alt="one of our employees hard at work"class="services-info-img"src="img/services-info.png">
         </nav>
         <p copy="">Copyright Great Idea 2018</p>
