--- a/great-idea/index.html
+++ b/great-idea/index.html
@@ -28,7 +28,7 @@
       </div>
       <header>
         <div class="inovation">
-          <h1>INAVATION ON DEMAND</h1>
+          <h1>INOVATION ON DEMAND</h1>
           <button>Get Started</button>
         </div>
         <img class='header-img' src="img/header-img.png" alt="Image of a code snippet.">
