--- a/great-idea/services.html
+++ b/great-idea/services.html
@@ -23,14 +23,15 @@
       </nav>
       <header>
         <img alt="Our services header image"class="services-header-img"src="img/services-header.jpg">
-          <div class="inovation">
+          <div class="services">
             <h1>Services</h1>
             <p>Our services provide the best digital value in nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu
             consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque eleifend. Mauris euismod facilisis iaculis.</p>
           </div>
       </header>
-        <section class="main-content">
-          <div class="top-content"></div>
+
+        <section class="boxes">
+          <div class="box1 box"></div>
           <h2>Digital Design</h2>
           <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh
               pellentesque eleifend. Mauris euismod facilisis iaculis.</p>
@@ -39,7 +40,7 @@
           <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh
                   pellentesque eleifend. Mauris euismod facilisis iaculis.</p>
           <button>Learn More</button>
-          <div class="middle-content"></div>
+          <div class="box2 box"></div>
           <h2>Digital Marketing</h2>
           <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh
                     pellentesque eleifend. Mauris euismod facilisis iaculis.</p>
@@ -48,7 +49,7 @@
           <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh
               pellentesque eleifend. Mauris euismod facilisis iaculis.</p>
           <button>Learn More</button>
-          <div class="bottom-content"></div>
+          <div class="box3 box"></div>
           <h2>iOS Development</h2>
           <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh
           pellentesque eleifend. Mauris euismod facilisis iaculis.</p>
@@ -58,19 +59,22 @@
           pellentesque eleifend. Mauris euismod facilisis iaculis.</p>
           <button>Learn More</button>
         </section>
-        <footer>
-        <div class="footer-content"></div>
+        
         <h2>Some Facts About Our Services</h2>
         <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh
         pellentesque eleifend. Mauris euismod facilisis iaculis.</p>
         <nav>
-          <a href="#">Awesome thing</a> 
-          <a href="#">Amazing thing</a> 
-          <a href="#">Cool thing</a> 
-          <a href="#">Great thing</a>
-            <img alt="one of our employees hard at work"class="services-info-img"src="img/services-info.png">
+            <ul>
+                <li>Awesome thing</li><br>
+                <li>Amazing thing</li><br>
+                <li>Cool thing</li><br>
+                <li>Great thing</li><br>
+            </ul>
         </nav>
-        <p copy="">Copyright Great Idea 2018</p>
-        </footer>
+        <img alt="one of our employees hard at work"class="services-info-img"src="img/services-info.png">
+        <br>
+        <br>
+        <p&copy="">Copyright Great Idea 2018</p>
+       
     </body>
 </html>
