--- a/great-idea/services.html
+++ b/great-idea/services.html
@@ -23,6 +23,7 @@
       </nav>
       <header>
         <img alt="Our services header image"class="services-header-img"src="img/services-header.jpg">
+        <br>
           <div class="services">
             <h1>Services</h1>
             <p>Our services provide the best digital value in nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu
@@ -31,50 +32,62 @@
       </header>
 
         <section class="boxes">
-          <div class="box1 box"></div>
+          <div class="box1">
           <h2>Digital Design</h2>
           <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh
               pellentesque eleifend. Mauris euismod facilisis iaculis.</p>
           <button>Learn More</button>
+         </div>
+          <div class="box2">
           <h2>UX / UI</h2>
           <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh
                   pellentesque eleifend. Mauris euismod facilisis iaculis.</p>
           <button>Learn More</button>
-          <div class="box2 box"></div>
+          </div>
+          <div class="box3">
           <h2>Digital Marketing</h2>
           <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh
                     pellentesque eleifend. Mauris euismod facilisis iaculis.</p>
           <button>Learn More</button><br>
+          </div>
+          <div class="box3">
           <h2>Web Development</h2>
           <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh
               pellentesque eleifend. Mauris euismod facilisis iaculis.</p>
           <button>Learn More</button>
-          <div class="box3 box"></div>
+          </div>
+          <div class="box4">
           <h2>iOS Development</h2>
           <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh
           pellentesque eleifend. Mauris euismod facilisis iaculis.</p>
           <button>Learn More</button>
+          </div>
+          <div class="box5">
           <h2>Android Development</h2>
           <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh
           pellentesque eleifend. Mauris euismod facilisis iaculis.</p>
           <button>Learn More</button>
+          </div>
         </section>
         
-        <h2>Some Facts About Our Services</h2>
-        <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh
-        pellentesque eleifend. Mauris euismod facilisis iaculis.</p>
-        <nav>
-            <ul>
-                <li>Awesome thing</li><br>
-                <li>Amazing thing</li><br>
-                <li>Cool thing</li><br>
-                <li>Great thing</li><br>
-            </ul>
-        </nav>
-        <img alt="one of our employees hard at work"class="services-info-img"src="img/services-info.png">
-        <br>
-        <br>
-        <p&copy="">Copyright Great Idea 2018</p>
-       
+        <section class="infoservices">
+          <div class="infoservice-card">
+            <h2>Some Facts About Our Services</h2>
+              <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh
+              pellentesque eleifend. Mauris euismod facilisis iaculis.</p>
+              <ul>
+                <li>Awesome thing</li>
+                <li>Amazing thing</li>
+                <li>Cool thing</li>
+                <li>Great thing</li>
+              </ul>     
+          </div>
+          <img class="services-info-img">
+            <img alt="one of our employees hard at work"class="services-info-img"src="img/services-info.png">
+        </section>
+        <footer>
+          <p&copy="">Copyright Great Idea 2018</p>
+        </footer>  
+     </div>       
     </body>
 </html>
