--- a/great-idea/services.html
+++ b/great-idea/services.html
@@ -2,92 +2,87 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Great Idea!</title>
+  <title>Great Idea! - Services</title>
   <link href="https://fonts.googleapis.com/css?family=Bangers|Titillium+Web"
         rel="stylesheet">
-  <link href="css/services.css"
+  <link href="css/index.css"
         rel="stylesheet"><!--[if lt IE 9]>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
   <![endif]-->
 </head>
-   <body>
-    <div class="navigation">
+<body>
+  <div class="container">
+    <header>
       <nav>
-        <a href="services.html">Services</a> 
-        <a href="#">Product</a> 
-        <a href="#">Vision</a> 
-        <a href="#">Features</a> 
-        <a href="#">About</a> 
-        <a href="#">Contact</a>
-        <img alt="Great Idea! Company logo."class="logo"src="img/logo.png"></div>
+        <a href="#">Services</a> <a href="#">Product</a> <a href="#">Vision</a> <a href="#">Features</a> <a href="#">About</a> <a href="#">Contact</a>
       </nav>
-      <header>
-        <img alt="Our services header image"class="services-header-img"src="img/services-header.jpg">
-        <br>
-          <div class="services">
-            <h1>Services</h1>
-            <p>Our services provide the best digital value in nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu
-            consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque eleifend. Mauris euismod facilisis iaculis.</p>
-          </div>
-      </header>
-
-        <section class="boxes">
-          <div class="box1">
+      <a href="index.html"></a><img alt="Great Idea! Company logo."
+              class="logo"
+              src="img/logo.png">
+    </header><img alt="Our services header image"
+         class="services-header-img"
+         src="img/services-header.jpg">
+    <article class="services-top-content">
+      <h2>Services</h2>
+      <p>Our services provide the best digital value in nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu
+      consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque eleifend. Mauris euismod facilisis iaculis.</p>
+    </article>
+    <section class="service-content-container">
+      <section class="services-content">
+        <article class="services-content-boxes">
           <h2>Digital Design</h2>
-          <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh
-              pellentesque eleifend. Mauris euismod facilisis iaculis.</p>
-          <button>Learn More</button>
-         </div>
-          <div class="box2">
+          <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus
+          nibh pellentesque eleifend. Mauris euismod facilisis iaculis.</p><button class="services-btn">Learn More</button>
+        </article>
+        <article class="services-content-boxes">
           <h2>UX / UI</h2>
-          <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh
-                  pellentesque eleifend. Mauris euismod facilisis iaculis.</p>
-          <button>Learn More</button>
-          </div>
-          <div class="box3">
+          <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus
+          nibh pellentesque eleifend. Mauris euismod facilisis iaculis.</p><button class="services-btn">Learn More</button>
+        </article>
+      </section>
+      <section class="services-content">
+        <article class="services-content-boxes">
           <h2>Digital Marketing</h2>
-          <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh
-                    pellentesque eleifend. Mauris euismod facilisis iaculis.</p>
-          <button>Learn More</button><br>
-          </div>
-          <div class="box3">
+          <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus
+          nibh pellentesque eleifend. Mauris euismod facilisis iaculis.</p><button class="services-btn">Learn More</button>
+        </article>
+        <article class="services-content-boxes">
           <h2>Web Development</h2>
-          <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh
-              pellentesque eleifend. Mauris euismod facilisis iaculis.</p>
-          <button>Learn More</button>
-          </div>
-          <div class="box4">
+          <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus
+          nibh pellentesque eleifend. Mauris euismod facilisis iaculis.</p><button class="services-btn">Learn More</button>
+        </article>
+      </section>
+      <section class="services-content">
+        <article class="services-content-boxes">
           <h2>iOS Development</h2>
-          <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh
-          pellentesque eleifend. Mauris euismod facilisis iaculis.</p>
-          <button>Learn More</button>
-          </div>
-          <div class="box5">
+          <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus
+          nibh pellentesque eleifend. Mauris euismod facilisis iaculis.</p><button class="services-btn">Learn More</button>
+        </article>
+        <article class="services-content-boxes">
           <h2>Android Development</h2>
-          <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh
-          pellentesque eleifend. Mauris euismod facilisis iaculis.</p>
-          <button>Learn More</button>
-          </div>
-        </section>
-        
-        <section class="infoservices">
-          <div class="infoservice-card">
-            <h2>Some Facts About Our Services</h2>
-              <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh
-              pellentesque eleifend. Mauris euismod facilisis iaculis.</p>
-              <ul>
-                <li>Awesome thing</li>
-                <li>Amazing thing</li>
-                <li>Cool thing</li>
-                <li>Great thing</li>
-              </ul>     
-          </div>
-          <img class="services-info-img">
-            <img alt="one of our employees hard at work"class="services-info-img"src="img/services-info.png">
-        </section>
-        <footer>
-          <p&copy="">Copyright Great Idea 2018</p>
-        </footer>  
-     </div>       
-    </body>
+          <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus
+          nibh pellentesque eleifend. Mauris euismod facilisis iaculis.</p><button class="services-btn">Learn More</button>
+        </article>
+      </section>
+    </section>
+    <section class="service-bottom-content">
+      <article class="service-bottom-text">
+        <h2>Some Facts About Our Services</h2>
+        <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh
+        pellentesque eleifend. Mauris euismod facilisis iaculis.</p><br>
+        <ul>
+          <li>Awesome thing</li>
+          <li>Amazing thing</li>
+          <li>Cool thing</li>
+          <li>Great thing</li>
+        </ul>
+      </article><img alt="one of our employees hard at work"
+               class="services-info-img"
+               src="img/services-info.png">
+    </section>
+    <footer>
+      <p>Copyright Great Idea! 2018</p>
+    </footer>
+  </div>
+</body>
 </html>
